contact.css
#contact-form {
    background-color: var(--primary-color);
    max-width: 70%;
    margin: 10px auto 10px auto;
    padding-top: 10px;
    padding-bottom: 20px;
    display: flex;
    justify-content: center;
    align-content: center;
    border-radius: 20px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.23), 0 6px 6px rgba(0,0,0,0.28);
}

.form-group {
    text-align: left;   
    margin: 0 auto 1.25rem auto;
    padding: 0.25rem;
}

.form-group label, .form-group p {
    font-size: x-large;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    color: var(--quartertiary-color);
}

input, select, textarea {
    font-family: inherit;
    font-size: large;
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border-radius: 10px;
}

textarea {
    min-height: 150px;
    min-width: 300px;
    border-radius: 10px;
}

::placeholder {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: larger;
}

.button-group {
    text-align: center;
}

button {
    min-width: 50%;
    font-size: large;
    line-height: 40px;
    color: white;
    background-color: var(--tertiary-color);
    border-radius: 20px;
    border-style: none;
    transition: all .5s;
}

button:hover {
    transition: .5s;
    transform: scale(1.2);
}

